syntax = "proto3";
package InnerMessageCore;

//ActorLocationMessage需要这个来回应
//MessageType ActorResponse
message _ActorResponse
{
}

//缓存数据库 加回应是为了确保能等待缓存结束
//MessageType ActorResponse
message DBCacheResponse{
}

//缓存数据库
//MessageType ActorRequest
//ResponseType DBCacheResponse
message DBCacheRequest{
	required bytes data = 1;
}

//数据库查询
//MessageType ActorResponse
message DBQueryResponse{
	optional bytes data = 1;
}

//数据库查询
//MessageType ActorRequest
//ResponseType DBQueryResponse
message DBQueryRequest{
	optional int64 numberKey = 1;
	optional string stringKey = 2;
	required int32 typeCode = 3;
}

//数据库删除
//MessageType ActorResponse
message DBDeleteResponse{
}

//数据库删除
//MessageType ActorRequest
//ResponseType DBDeleteResponse
message DBDeleteRequest{
	optional int64 numberKey = 1;
	optional string stringKey = 2;
	required int32 typeCode = 3;
}

//MessageType ActorRequest
//ResponseType ObjectAddResponse
message ObjectAddRequest
{
	required int64 key = 1;
	required int64 instanceId = 2;
}
//MessageType ActorResponse
message ObjectAddResponse
{

}

//MessageType ActorRequest
//ResponseType ObjectGetResponse
message ObjectGetRequest
{
	required int64 key = 1;
}
//MessageType ActorResponse
message ObjectGetResponse
{
	required int64 instanceId = 1;
}

//MessageType ActorResponse
message ObjectLockResponse
{
}

//MessageType ActorRequest
//ResponseType ObjectLockResponse
message ObjectLockRequest
{
	required int64 key = 1;
	required int64 instanceId = 2;
	required int32 time = 3;
}

//MessageType ActorRequest
//ResponseType ObjectRemoveResponse
message ObjectRemoveRequest
{
	required int64 key = 1;
}
//MessageType ActorResponse
message ObjectRemoveResponse
{
}

//MessageType ActorRequest
//ResponseType ObjectUnLockResponse
message ObjectUnLockRequest
{
	int64 key = 1;
	int64 oldInstanceId = 2;
	int64 instanceId = 3;
}
//MessageType ActorResponse
message ObjectUnLockResponse
{
}

//MessageType ActorResponse
message G2R_GetLoginKey
{
	required int64 key = 1;
}

//MessageType ActorRequest
//ResponseType G2R_GetLoginKey
message R2G_GetLoginKey
{
	required string account = 1;
}

//连接unit
//MessageType ActorLocationRequest
//ResponseType M2G_ConnectUnit
message G2M_ConnectUnit{
	required int64 sessionInstanceId = 1;
}

//MessageType ActorLocationResponse
message M2G_ConnectUnit{
	// unit所在scene的instanceId
	required int64 sceneInstanceId = 1;
}

//与unit断开连接
//MessageType ActorLocationRequest
//ResponseType M2G_DisconnectUnit
message G2M_DisconnectUnit{
	required int64 sessionInstanceId = 1;
}

//MessageType ActorLocationResponse
message M2G_DisconnectUnit{
}

//MessageType ActorResponse
message M2M_UnitTransferResponse
{

}

//传送unit
//MessageType ActorRequest
//ResponseType M2M_UnitTransferResponse
message M2M_UnitTransferRequest
{
	int64 oldInstanceId = 1;
	bytes unit = 2;
	repeated bytes entitys = 3;
}
